<resources>
    <string name="app_name">WithAPI</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="passnew">Nueva Contraseña</string>
    <string name="pass2">Repetir contraseña</string>
    <string name="Log_in">Acceder</string>
    <string name="Reg">Registrarse</string>
    <string name="Regnom">Nombre</string>
    <string name="Reguser">Usuario</string>
    <string name="RegApe">Apellido</string>
    <string name="Regcor">Correo</string>
    <string name="Regcor2">Repetir Correo</string>
    <string name="Corrvacio">El correo o su validación está vacío por favor rellénelo </string>
    <string name="passvacio">La contraseña o su validación está vacío por favor rellénelo</string>
    <string name="falloReg">El Usuario o la contraseña es incorrecto o el Usuario que has elegido ya xiste</string>
    <string name="okreg">Todo ha salido bien, estas registrado</string>
    <string name="loginSi">Acceso Correcto</string>
    <string name="loginNo">Ha habido un problema, por favor contacta con el Administrador</string>
    <string name="Subirarchivo">Subir Fichero</string>
    <string name="settings">Configuración</string>
    <string name="FAQS">FAQS</string>
    <string name="WhoAre">Quienes Somos</string>
    <string name="Misarchivos">Mis Ficheros</string>
    <string name="descarga">Descargar</string>
    <string name="search">Buscar</string>
    <string name="upfile">Subir Fichero</string>
    <string name="titulo_subida">Subir Fichero</string>
    <string name="Bonos">Bonos</string>
    <string name="nombrearchivo">Nombre</string>
    <string name="titulo_up">Nombre del Fichero</string>
    <string name="ruta">Ruta</string>
    <string name="save">Guardar</string>
    <string name="contra">Contratar</string>
    <string name="guardar">Se ha guardado correctamente</string>
    <string name="webview">Versión web</string>
    <string name="todook">Todo ha salido bien, ya tienes los bonos</string>
    <string name="todoko">Algo ha salido mal, mira el log</string>
    <string name="faqs">FAQS</string>
    <string name="recuperarcontra">¿Has olvidado tu contraseña? pulsa aquí</string>
    <string name="miraremail">Revisa tu correo para restablecer tu contraseña</string>
    <string name="choose">"Tienes que elegir un fichero"</string>
    <string name="hinreccontra">introducie tu email</string>
    <string name="recucontra">Recuperación de contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="servicess">Servicios</string>
    <string name="Ecommerse">E-commerse</string>
    <string name="asunto">Asunto</string>
    <string name="contacto">Contacto</string>
    <string name="nonombre">El nombre no puede estar vacío</string>
    <string name="qsomos">Quienes somos</string>
    <string name="permisos">Por favor, dame permisos</string>
    <string name="Myfiles">Mis archivos</string>
</resources>
