<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Reguser"
        android:text="sap"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editnom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Regnom"
        android:text="sap"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editapelli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegApe"
        android:text="sap"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Regcor"
        android:inputType="textEmailAddress"
        android:text="sap@sap.com"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editcorreo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Regcor2"
        android:inputType="textEmailAddress"
        android:text="sap@sap.com"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:text="sap"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editpasscorr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass2"
        android:inputType="textPassword"
        android:text="sap"
        android:textAlignment="center" />

    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Reg" />
</LinearLayout>