<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/user"
        android:text="sergio" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:text="swdzswdz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/login"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/Log_in" />

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <Button
                android:id="@+id/singup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reg" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recuperar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recuperarcontra"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp" />

    </LinearLayout>


</LinearLayout>